Ass3/KSTN/target/main/bkit/parser/BKITParser.py
# Generated from main/bkit/parser/BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "';'", "':'", "'{'", "'}'", "'('", 
                     "')'", "'['", "']'", "'='", "'.'", "'Var'", "'Function'", 
                     "'Parameter'", "'Body'", "'EndBody'", "'If'", "'ElseIf'", 
                     "'Then'", "'Else'", "'EndIf'", "'For'", "'EndFor'", 
                     "'Do'", "'EndDo'", "'Break'", "'While'", "'EndWhile'", 
                     "'Continue'", "'Return'", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'\\'", "'%'", "'+.'", "'-.'", "'*.'", "'\\.'", 
                     "'!'", "'&&'", "'||'", "'=='", "'!='", "'<'", "'>'", 
                     "'<='", "'>='", "'=/='", "'<.'", "'>.'", "'<=.'", "'>=.'" ]

    symbolicNames = [ "<INVALID>", "CM", "SEMI", "COLON", "LB", "RB", "LP", 
                      "RP", "LSB", "RSB", "ASSIGN", "DOT", "VAR", "FUNC", 
                      "PARAM", "BODY", "END_BODY", "IF", "ELSEIF", "THEN", 
                      "ELSE", "ENDIF", "FOR", "ENDFOR", "DO", "ENDDO", "BREAK", 
                      "WHILE", "ENDWHILE", "CONTINUE", "RETURN", "RELATIONAL", 
                      "ADD", "SUB", "MUL", "DIV", "REMAINDER", "F_ADD", 
                      "F_SUB", "F_MUL", "F_DIV", "BOOL_NEGA", "BOOL_CONJ", 
                      "BOOL_DISJ", "EQUAL", "NOT_EQUAL", "LESS_THAN", "GREATER_THAN", 
                      "LESS_THAN_EQ", "GREATER_THAN_EQ", "F_NOT_EQUAL", 
                      "F_LESS_THAN", "F_GREATER_THAN", "F_LESS_THAN_EQ", 
                      "F_GREATER_THAN_EQ", "ID", "INTLIT", "DEC", "HEX", 
                      "OTC", "FLOATLIT", "BOOLEANLIT", "STRINGLIT", "WS", 
                      "BLOCK_CMT", "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_var_declare = 1
    RULE_var_declare_item = 2
    RULE_var_init = 3
    RULE_var_id = 4
    RULE_all_literal = 5
    RULE_array_literal = 6
    RULE_func_declare = 7
    RULE_expression = 8
    RULE_exp1 = 9
    RULE_exp2 = 10
    RULE_exp3 = 11
    RULE_exp4 = 12
    RULE_exp5 = 13
    RULE_exp6 = 14
    RULE_operand = 15
    RULE_func_call_exp = 16
    RULE_statement = 17
    RULE_lhs = 18
    RULE_assign_stm = 19
    RULE_statement_list = 20
    RULE_if_stm = 21
    RULE_for_stm = 22
    RULE_while_stm = 23
    RULE_dowhile_stm = 24
    RULE_break_stm = 25
    RULE_continue_stm = 26
    RULE_call_stm = 27
    RULE_return_stm = 28

    ruleNames =  [ "program", "var_declare", "var_declare_item", "var_init", 
                   "var_id", "all_literal", "array_literal", "func_declare", 
                   "expression", "exp1", "exp2", "exp3", "exp4", "exp5", 
                   "exp6", "operand", "func_call_exp", "statement", "lhs", 
                   "assign_stm", "statement_list", "if_stm", "for_stm", 
                   "while_stm", "dowhile_stm", "break_stm", "continue_stm", 
                   "call_stm", "return_stm" ]

    EOF = Token.EOF
    CM=1
    SEMI=2
    COLON=3
    LB=4
    RB=5
    LP=6
    RP=7
    LSB=8
    RSB=9
    ASSIGN=10
    DOT=11
    VAR=12
    FUNC=13
    PARAM=14
    BODY=15
    END_BODY=16
    IF=17
    ELSEIF=18
    THEN=19
    ELSE=20
    ENDIF=21
    FOR=22
    ENDFOR=23
    DO=24
    ENDDO=25
    BREAK=26
    WHILE=27
    ENDWHILE=28
    CONTINUE=29
    RETURN=30
    RELATIONAL=31
    ADD=32
    SUB=33
    MUL=34
    DIV=35
    REMAINDER=36
    F_ADD=37
    F_SUB=38
    F_MUL=39
    F_DIV=40
    BOOL_NEGA=41
    BOOL_CONJ=42
    BOOL_DISJ=43
    EQUAL=44
    NOT_EQUAL=45
    LESS_THAN=46
    GREATER_THAN=47
    LESS_THAN_EQ=48
    GREATER_THAN_EQ=49
    F_NOT_EQUAL=50
    F_LESS_THAN=51
    F_GREATER_THAN=52
    F_LESS_THAN_EQ=53
    F_GREATER_THAN_EQ=54
    ID=55
    INTLIT=56
    DEC=57
    HEX=58
    OTC=59
    FLOATLIT=60
    BOOLEANLIT=61
    STRINGLIT=62
    WS=63
    BLOCK_CMT=64
    ERROR_CHAR=65
    UNCLOSE_STRING=66
    ILLEGAL_ESCAPE=67
    UNTERMINATED_COMMENT=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def var_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_declareContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_declareContext,i)


        def func_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Func_declareContext)
            else:
                return self.getTypedRuleContext(BKITParser.Func_declareContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 58
                self.var_declare()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNC:
                self.state = 64
                self.func_declare()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def var_declare_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_declare_itemContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_declare_itemContext,i)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.CM)
            else:
                return self.getToken(BKITParser.CM, i)

        def getRuleIndex(self):
            return BKITParser.RULE_var_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_declare" ):
                return visitor.visitVar_declare(self)
            else:
                return visitor.visitChildren(self)




    def var_declare(self):

        localctx = BKITParser.Var_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_var_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(BKITParser.VAR)
            self.state = 73
            self.match(BKITParser.COLON)
            self.state = 74
            self.var_declare_item()
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.CM:
                self.state = 75
                self.match(BKITParser.CM)
                self.state = 76
                self.var_declare_item()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 82
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declare_itemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_id(self):
            return self.getTypedRuleContext(BKITParser.Var_idContext,0)


        def var_init(self):
            return self.getTypedRuleContext(BKITParser.Var_initContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_var_declare_item

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_declare_item" ):
                return visitor.visitVar_declare_item(self)
            else:
                return visitor.visitChildren(self)




    def var_declare_item(self):

        localctx = BKITParser.Var_declare_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_declare_item)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 84
                self.var_id()
                pass

            elif la_ == 2:
                self.state = 85
                self.var_init()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_initContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def all_literal(self):
            return self.getTypedRuleContext(BKITParser.All_literalContext,0)


        def LSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LSB)
            else:
                return self.getToken(BKITParser.LSB, i)

        def INTLIT(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.INTLIT)
            else:
                return self.getToken(BKITParser.INTLIT, i)

        def RSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RSB)
            else:
                return self.getToken(BKITParser.RSB, i)

        def getRuleIndex(self):
            return BKITParser.RULE_var_init

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_init" ):
                return visitor.visitVar_init(self)
            else:
                return visitor.visitChildren(self)




    def var_init(self):

        localctx = BKITParser.Var_initContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_init)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(BKITParser.ID)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.LSB:
                self.state = 89
                self.match(BKITParser.LSB)
                self.state = 90
                self.match(BKITParser.INTLIT)
                self.state = 91
                self.match(BKITParser.RSB)
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 97
            self.match(BKITParser.ASSIGN)
            self.state = 98
            self.all_literal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_idContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def LSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LSB)
            else:
                return self.getToken(BKITParser.LSB, i)

        def INTLIT(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.INTLIT)
            else:
                return self.getToken(BKITParser.INTLIT, i)

        def RSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RSB)
            else:
                return self.getToken(BKITParser.RSB, i)

        def getRuleIndex(self):
            return BKITParser.RULE_var_id

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_id" ):
                return visitor.visitVar_id(self)
            else:
                return visitor.visitChildren(self)




    def var_id(self):

        localctx = BKITParser.Var_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_id)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(BKITParser.ID)
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.LSB:
                self.state = 101
                self.match(BKITParser.LSB)
                self.state = 102
                self.match(BKITParser.INTLIT)
                self.state = 103
                self.match(BKITParser.RSB)
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class All_literalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(BKITParser.INTLIT, 0)

        def FLOATLIT(self):
            return self.getToken(BKITParser.FLOATLIT, 0)

        def BOOLEANLIT(self):
            return self.getToken(BKITParser.BOOLEANLIT, 0)

        def STRINGLIT(self):
            return self.getToken(BKITParser.STRINGLIT, 0)

        def array_literal(self):
            return self.getTypedRuleContext(BKITParser.Array_literalContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_all_literal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAll_literal" ):
                return visitor.visitAll_literal(self)
            else:
                return visitor.visitChildren(self)




    def all_literal(self):

        localctx = BKITParser.All_literalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_all_literal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.INTLIT]:
                self.state = 109
                self.match(BKITParser.INTLIT)
                pass
            elif token in [BKITParser.FLOATLIT]:
                self.state = 110
                self.match(BKITParser.FLOATLIT)
                pass
            elif token in [BKITParser.BOOLEANLIT]:
                self.state = 111
                self.match(BKITParser.BOOLEANLIT)
                pass
            elif token in [BKITParser.STRINGLIT]:
                self.state = 112
                self.match(BKITParser.STRINGLIT)
                pass
            elif token in [BKITParser.LB]:
                self.state = 113
                self.array_literal()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_literalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(BKITParser.LB, 0)

        def RB(self):
            return self.getToken(BKITParser.RB, 0)

        def all_literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.All_literalContext)
            else:
                return self.getTypedRuleContext(BKITParser.All_literalContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.CM)
            else:
                return self.getToken(BKITParser.CM, i)

        def getRuleIndex(self):
            return BKITParser.RULE_array_literal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_literal" ):
                return visitor.visitArray_literal(self)
            else:
                return visitor.visitChildren(self)




    def array_literal(self):

        localctx = BKITParser.Array_literalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_array_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(BKITParser.LB)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.LB) | (1 << BKITParser.INTLIT) | (1 << BKITParser.FLOATLIT) | (1 << BKITParser.BOOLEANLIT) | (1 << BKITParser.STRINGLIT))) != 0):
                self.state = 117
                self.all_literal()
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==BKITParser.CM:
                    self.state = 118
                    self.match(BKITParser.CM)
                    self.state = 119
                    self.all_literal()
                    self.state = 124
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 127
            self.match(BKITParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COLON)
            else:
                return self.getToken(BKITParser.COLON, i)

        def statement_list(self):
            return self.getTypedRuleContext(BKITParser.Statement_listContext,0)


        def END_BODY(self):
            return self.getToken(BKITParser.END_BODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def FUNC(self):
            return self.getToken(BKITParser.FUNC, 0)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def PARAM(self):
            return self.getToken(BKITParser.PARAM, 0)

        def var_id(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_idContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_idContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.CM)
            else:
                return self.getToken(BKITParser.CM, i)

        def getRuleIndex(self):
            return BKITParser.RULE_func_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_declare" ):
                return visitor.visitFunc_declare(self)
            else:
                return visitor.visitChildren(self)




    def func_declare(self):

        localctx = BKITParser.Func_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_func_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(BKITParser.FUNC)
            self.state = 130
            self.match(BKITParser.COLON)
            self.state = 131
            self.match(BKITParser.ID)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARAM:
                self.state = 133
                self.match(BKITParser.PARAM)
                self.state = 134
                self.match(BKITParser.COLON)
                self.state = 135
                self.var_id()
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==BKITParser.CM:
                    self.state = 136
                    self.match(BKITParser.CM)
                    self.state = 137
                    self.var_id()
                    self.state = 142
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 145
            self.match(BKITParser.BODY)
            self.state = 146
            self.match(BKITParser.COLON)
            self.state = 147
            self.statement_list()
            self.state = 148
            self.match(BKITParser.END_BODY)
            self.state = 149
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Exp1Context)
            else:
                return self.getTypedRuleContext(BKITParser.Exp1Context,i)


        def RELATIONAL(self):
            return self.getToken(BKITParser.RELATIONAL, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = BKITParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expression)
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.exp1(0)
                self.state = 152
                self.match(BKITParser.RELATIONAL)
                self.state = 153
                self.exp1(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.exp1(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exp1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp2(self):
            return self.getTypedRuleContext(BKITParser.Exp2Context,0)


        def exp1(self):
            return self.getTypedRuleContext(BKITParser.Exp1Context,0)


        def BOOL_CONJ(self):
            return self.getToken(BKITParser.BOOL_CONJ, 0)

        def BOOL_DISJ(self):
            return self.getToken(BKITParser.BOOL_DISJ, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_exp1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp1" ):
                return visitor.visitExp1(self)
            else:
                return visitor.visitChildren(self)



    def exp1(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = BKITParser.Exp1Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_exp1, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.exp2(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 166
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = BKITParser.Exp1Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_exp1)
                    self.state = 161
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 162
                    _la = self._input.LA(1)
                    if not(_la==BKITParser.BOOL_CONJ or _la==BKITParser.BOOL_DISJ):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 163
                    self.exp2(0) 
                self.state = 168
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Exp2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
